--- a/02_springboot/02_03_Web搭建.md
+++ b/02_springboot/02_03_Web搭建.md
@@ -192,3 +192,100 @@ public class FileController {
 ```
 
 
+# 4 拦截器
+
+拦截器在Wb系统中非常常见，对于某些全局统一的操作，我们可以把它提取 到拦截器中实现。总结起来，拦截器大致有以下几种使用场景：
+- 权限检查：如登录检测，进入处理程序检测是否登录，如果没有，则直接返回 登录页面。
+- 性能监控：有时系统在某段时间莫名其妙很慢，可以通过拦截器在进入处理程序之前记录开始时间，在处理完后记录结束时间，从而得到该请求的处理时间
+- 通用行为：读取cookie得到用户信息并将用户对象放入请求，从而方便后续流程使用，还有提取Locale、Theme信息等，只要是多个处理程序都需要的，即可使用拦截器实现。
+
+
+## 4.1 拦截器定义 
+
+Spring Boot定义了Handlerlnterceptor接口来实现自定义拦截器的功能
+HandlerInterceptor接口定义了preHandle、postHandle、afterCompletion 三种方法，通过重写这三种方法实现请求前、请求后等操作
+- preHandle 返回true, 就会继续调用后续的 preHandle.  如果返回为 false, 则会继续调用 后续的 preHandle 
+
+
+![](images/Pasted%20image%2020250221110228.png)
+
+
+![](images/Pasted%20image%2020250221105239.png)
+
+
+```java
+public class LoginInterceptor extends HandlerInterceptor{
+    /**给0
+    *在请求处理之前进行调用(Contro11er方法调用之前)
+    */
+    
+    @override
+    public boolean preHandle(HttpservletRequest request,HttpservletResponse response,object handler) throws Exception
+    {
+        if(条件){
+            System.out.printin("通过")；
+            return true;
+        } else {
+            System.out.printin("不通过")；
+            return false;
+        }
+    }
+    
+}
+
+```
+
+## 4.2 拦截器注册 
+
+- addPathPatterns方法定义拦截的地址
+- excludePathPatterns定义排除某些地址不被拦截
+- 添加的一个拦截器, 如果没有addPathPattern任何一个url, 侧默认拦截所有请求
+- 如果没有excludePathPatterns任何一个请求，则默认不放过任何一个请求。
+
+```java
+@Configuration
+public class Webconfigurer implements WebMvcConfigurer {
+    @override
+    public void addInterceptors(InterceptorRegistry registry) {
+        registry.addInterceptor(new LoginInterceptor()).addPathPatterns("/user/**");
+    }
+}
+```
+
+
+
+# 5 RESTful API 实现 
+
+```java
+@RestController
+public class UserController{
+
+    @GetMapping("/user/{id}")
+    public String getUserById(@PathVariable int id){
+        return"根据ID获取用户"；
+    }
+    
+    @PostMapping("/user")
+    public String save(User user){
+        return"添加用户"；
+    }
+    
+    @PutMapping("/user")
+    public String update(User user){
+        return"更新用户"；
+    }
+    
+    @DeleteMapping("/user/{id}")
+    public String deleteById(@PathVariable int id){
+        return"根据ID删除用户"；
+    }
+}
+
+```
+
+
+
+
+
+
+
